--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -2,41 +2,47 @@
 
 .contact-background-one {
 	width: 100%;
-	height: 400px;
+	height: 500px;
 	background-color: $teal;
 	clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 100%);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	z-index: -10;
-	margin-top: -140px;
+	margin-top: -180px;
 }
 
 .contact-title-container {
-	margin-top: 140px;
+	margin-top: 220px;
 
 	p {
 		text-align: center;
+		line-height: 1.4;
 	}
 }
 
 .contact-form {
 	margin-top: -40px;
 	text-align: center;
+	margin-bottom: 4rem;
 
 	p {
 		margin-bottom: 1.25rem;
+		line-height: 1.4;
 	}
 
 	a {
 		text-decoration: none;
-		color: $red;
-		font-weight: bold;
+		transition: all 100ms ease-in-out;
+		padding-bottom: .2rem;
+		border-bottom: 1px solid $primary-text;
 
 		&:hover,
 		&:active,
 		&:focus {
-			text-decoration: underline;
+			color: $card-background;
+			background-color: $primary-text;
+			outline: none;
 		}
 	}
 
@@ -51,6 +57,7 @@
 		padding-bottom: .5rem;
 		text-align: center;
 		font-size: 1rem;
+		margin-bottom: 1rem;
 
 		&::placeholder {
 			text-align: center;
@@ -67,6 +74,7 @@
 		height: 20vh;
 		max-height: 200px;
 		text-indent: 0;
+		text-align: left;
 		padding: 1rem;
 		margin-bottom: 1.25rem;
 
@@ -77,18 +85,35 @@
 		}
 	}
 
-	button {
-		font-size: 1rem;
-		padding: 1.25rem 1.5rem;
-		background-color: $teal;
-		border-radius: $b-radius / 2;
-		border: none;
-		transition: box-shadow 150ms ease-in-out;
+	input,
+	textarea {
+		transform: scale(.95);
+		transition: transform 100ms ease-in-out;
 
 		&:hover,
 		&:active,
 		&:focus {
-			box-shadow: 0 0 5px 5px $teal;
+			transform: scale(1);
+			outline: none;
+		}
+	}
+
+	button {
+		font-size: 1rem;
+		font-weight: bold;
+		padding: 1.25rem 1.5rem;
+		background-color: $teal;
+		border-radius: $b-radius / 2;
+		border: none;
+		transition: all 150ms ease-in-out;
+
+	&:hover,
+		&:active,
+		&:focus {
+			transform: translateY(-.25rem);
+			text-decoration: underline;
+			outline: none;
+			box-shadow: 0 2px 4px $placeholder-text;
 		}
 	}
 }
