--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -6,7 +6,7 @@
 	align-items: flex-end;;
 	width: 100%;
 	padding: 0 2rem;
-	height: 4rem;
+	height: 3rem;
 	box-shadow: 0 0 5px 10px $primary-background;
 	position: fixed;
 	top: 0;
