--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -109,6 +109,7 @@
 		text-align: center;
 		font-size: .625rem;
 		line-height: 1.5;
+		color: $card-background;
 	}
 }
 
@@ -147,10 +148,12 @@
 	text-align: center;
 	font-size: .75rem;
 	margin-bottom: 1rem;
+	color: $card-background;
 }
 
 .tech {
 	font-size: .625rem;
 	text-align: center;
 	line-height: 1.4;
+	color: $card-background;
 }
