--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -55,13 +55,14 @@
 }
 
 *{
-	outline: 1px solid rgba(255, 0, 0, 0.263);
+	// outline: 1px solid rgba(255, 0, 0, 0.263);
 	font-family: 'Raleway', Roboto, Ariel, sans-serif;
 	box-sizing: border-box;
 	background-color: transparent;
 	margin: 0;
 	padding: 0;
 	scroll-behavior: smooth;
+	color: $primary-text;
 }
 
 body {
